Fix scrollbar issues

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -222,7 +222,7 @@ img#neh-logo {
   margin:15px;
   border-top:1px solid #AAA;
   border-bottom:1px solid #AAA;
-} 
+}
 .chapter-bookmark-onclick-event {
   margin:0px;
   padding:0px;
@@ -233,29 +233,3 @@ img#neh-logo {
   padding:0px;
   margin:0px;
 }
-
-/*
-::-webkit-scrollbar {
-    width: 1em;
-}
-
-::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-}
-::-webkit-scrollbar-thumb {
-  background-color: darkgrey;
-  outline: 1px solid slategrey;
-}
-*/
-
-::-webkit-scrollbar {
-    // Width of vertical scroll bar
-    width: 8px;
-    // Height of horizontal scroll bar
-    height: 10px;
-
-  }
-  ::-webkit-scrollbar-thumb {
-    border-radius: 8px;
-    background: #c2c9d2;
-  }
