--- a/app/assets/stylesheets/breadcrumbs-overrides.css.scss
+++ b/app/assets/stylesheets/breadcrumbs-overrides.css.scss
@@ -5,12 +5,13 @@
   width: 370%;
   overflow-x: scroll;
   padding-bottom: 8px;
+
 }
-::-webkit-scrollbar {
+.document-title-overflow::-webkit-scrollbar {
     -webkit-appearance: none;
     height: 2px;
 }
-::-webkit-scrollbar-thumb {
+.document-title-overflow::-webkit-scrollbar-thumb {
     border-radius: 4px;
     background-color: rgba(0,0,0,.5);
     box-shadow: 0 0 1px rgba(255,255,255,.5);
